rust/kcl-lib/tests/double_close/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing double_close.kcl
---
KCL Semantic error

  × semantic: This sketch is already closed. Remove this unnecessary `close()`
  │ call
   ╭─[4:6]
 3 │   |> rectangle(center = [0, 0], width = 10, height = 10)
 4 │   |> close()
   ·      ───┬───┬
   ·         ╰── tests/double_close/input.kcl
   ·         ╰── tests/double_close/input.kcl
   ╰────
  ╰─▶ KCL Semantic error
      
        × semantic: This sketch is already closed. Remove this unnecessary
        │ `close()` call
         ╭─[4:6]
       3 │   |> rectangle(center = [0, 0], width = 10, height = 10)
       4 │   |> close()
         ·      ───┬───
         ·         ╰── tests/double_close/input.kcl
         ╰────
